add simple test, and make working api
Took 2 hours 37 minutes
